# textolitaire

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  card.h  config.h  controls.c  controls.h  diskdata.c  display-curses.c  display.c  display.h  getche.h  sol.c  sol.h  solstack.c  solstack.h  table.c  table.h
inc/: card.h  config.h  controls.h  diskdata.h  display.h  game.h  input.h  solstack.h  table.h
src/: card.c  controls.c  diskdata.c  display-curses.c  display-term.c  display.c  game.c  getche.c  input-curses.c  input-random.c  input-termios.c  main.c  sol.c  solstack.c  table.c
